# desec

./: .gitignore  README.md  desec.py  pyproject.toml
core/: __init__.py  api.py  env.py  output.py
gui/: __init__.py  app.py
old/: main.py
tui/: __init__.py  app.py  widgets.py
tui/screens/: __init__.py  domains.py  login.py  policies.py  provision.py  rrsets.py  tokens.py
